# app/Models/Contact.php
@@ -2,22 +2,23 @@
 
 namespace App\Models;
 
+use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class Contato extends Model
+class Contact extends Model
 {
+    use HasFactory;
+
     protected $fillable = [
         'user_id',
-        'nome',
-        'telefone',
+        'name',
+        'phone',
         'email',
-        'favorito',
+        'favorite',
     ];
 
     public function user()
     {
         return $this->belongsTo(User::class);
     }
-
-    
 }
